--- a/pleje.html
+++ b/pleje.html
@@ -10,7 +10,7 @@
 
     <!-- header-->
 <header>
-        <a href="hundehjornet.html">
+        <a href="index.html">
           <img src="pil_forside.png" alt="Pil til forside">
         </a>
 
