ændringer ved font, links og responsiv design

--- a/Traening.html
+++ b/Traening.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Madimi+One&display=swap" rel="stylesheet">
     <title>Hundetræning, pleje og sundhed.</title>
 </head>
 <body class="baggrund_farve">
 
     <!-- header-->
 <header>
-        <a href="hundehjornet.html">
+        <a href="index.html">
           <img src="pil_forside.png" alt="Pil til forside">
         </a>
 
